2005-01-21 Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/component/addressbook-config.c 
	(eabc_commit) : in case of new book
	set the uid of the source as the relative 
	uri. 

2005-01-19  Hao Sheng <hao.sheng@sun.com>

	* gui/contact-editor/contact-editor.glade:
	add accessable key to the contact editor UI.
	* gui/contact-list-editor/contact-list-editor.glade:
	add accessable key to the contact list editor UI.

2005-01-18  Hao Sheng <hao.sheng@sun.com>

	* gui/component/addressbook-view.c:
	(addressbook_view_init): add a11y name for the contact's
	treeview.

2005-01-18 Hao Sheng <hao.sheng@sun.com>

	* gui/contact-editor/contact-editor.glade:
	add a11y names for widgets named "Image","Anniversary" and "Birthday".
	* gui/contact-editor/e-contact-editor.c:
	(e_contact_editor_create_date): add string1 as entry's a11y name.

2005-01-17 Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/contact-editor/e-contact-editor.c 
	(fill_in_email_record) : show "other" when email 
	does not carry "TYPE"
	(fill_in_email) : pass deafult email 
	types instead of -1 when clearing fields 
	
	Fixes #70922 
	
2005-01-17 Hao Sheng  <hao.sheng@sun.com>

	* gui/contact-editor/contact-editor.glade:
	add the a11y name for arrow-button named "Telephone".

2005-01-12  JP Rosevear  <jpr@novell.com>

	Fixes #61973
	
	* gui/widgets/e-addressbook-view.etspec: add translator comment for TTYTDD 

2005-01-11  Not Zed  <NotZed@Ximian.com>

	* util/eab-book-util.c (eab_name_and_email_query): cast length
	specifier to int.

2005-01-10  Hans Petter Jansson  <hpj@novell.com>

	* gui/widgets/e-minicard.c (e_minicard_activate_editor): When spawning
	an editor, set the initial editability from the target book, not from
	the minicard's own (usually stale, useless) editable state.

2005-01-06  JP Rosevear  <jpr@novell.com>

	* gui/component/Makefile.am: install schemas properly

2004-12-21  Andre Klapper <a9016009@gmx.de>
       
       * tools/evolution-addressbook-export.c: